--- a/styles/architects.css
+++ b/styles/architects.css
@@ -43,6 +43,15 @@
     border: none;
 }
 
+
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+main > section{
+    margin-top: 130px;
+}
 /* secondary bacround color */
 .bg-light{
     /* background-color: #FF900E10; */
@@ -53,7 +62,8 @@
 
 /* header styles */
 .header{
-    padding: 0 150px;
+    /* max-width: 1440px; */
+    /* padding: 0 150px; */
 }
 /* navbar related styles */
 
@@ -101,6 +111,34 @@
     width: 100%;
 }
 
+/* team feature and architect */
+.teams{
+    align-items: center;
+}
+
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+
+}
+
+.our-features{
+    margin-left: 130px;
+    max-width: 530px;
+}
+
+.feature-tittle{
+    font-size: 2.8rem;
+    font-style: 700;
+}
+
+#quick-list{
+    color: #727272;
+    font-weight: 500;
+}
+
+/* responsive media query */
 @media screen and (max-width:576px) {
     .navbar, .nav-links{
         flex-direction: column;
