--- a/styles/architects.css
+++ b/styles/architects.css
@@ -17,6 +17,10 @@
     display: flex;
 }
 
+.text-primary{
+    color: #FF900E;
+}
+
 /* dark-01 */
 .text-dark{
     color: #000000;
@@ -52,6 +56,14 @@ main{
 main > section{
     margin-top: 130px;
 }
+
+
+.section-tittle{
+    font-size: 2.8rem;
+    font-style: 700;
+}
+
+
 /* secondary bacround color */
 .bg-light{
     /* background-color: #FF900E10; */
@@ -128,20 +140,100 @@ main > section{
     max-width: 530px;
 }
 
-.feature-tittle{
-    font-size: 2.8rem;
-    font-style: 700;
-}
+
 
 #quick-list{
     color: #727272;
     font-weight: 500;
 }
 
+
+/* some fact related style */
+.fact-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    margin-top: 70px;
+}
+.fact-card{
+    border: 2px solid #FF900E;
+    height: 240px;
+    width: 240px;
+    border-radius: 8px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.fact-number{
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+.fact-name{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px;
+}
+
+.fact-description{
+    max-width: 540px;
+}
+
+/* sponsors related styles */
+.sponsor-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+
+.sponsor-companies{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+
+.sponsor-companies img{
+    filter: grayscale(100%);
+}
+
 /* responsive media query */
 @media screen and (max-width:576px) {
-    .navbar, .nav-links{
+    .navbar, .nav-links, .teams{
         flex-direction: column;
     }
+
+    .team-img-container, .fact-container, .sponsor-companies{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .fact-container{
+        justify-items: center;
+        gap: 25px;
+    }
+    .sponsor-companies{
+        justify-items: center;
+        gap: 50px;
+    }
+
+    .our-features{
+        margin-left: 20px;
+    }
     
+}
+
+@media  screen and (min-width:576px) and (max-width:992px) {
+    .teams{
+        flex-direction: column;
+    }
+
+    .our-features{
+        margin: 50px auto;
+    }
+    .sponsor-companies, .fact-container{
+        grid-template-columns: repeat(2,1fr);
+        gap: 50px;
+        justify-items: center;
+    }
 }
